# robocup-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  build.rs  error.txt  install-dependencies.sh  rustfmt.toml
.cargo/: config
.github/workflows/: make.yml
nao-os/: README.md
src/: main.rs  spl.rs  toml.rs
src/comm/: udp.rs
src/state/: game.rs  interrupt.rs
