[package]
name = "robocup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio.git", branch = "master", features = ["full"] }

[build-dependencies]
bindgen = { git = "https://github.com/rust-lang/rust-bindgen.git", branch = "main" }
