[package]
name = "robocup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_print = { git = "https://github.com/RustyNixieTube/debug_print.git", branch = "master" }

[build-dependencies]
bindgen = { git = "https://github.com/rust-lang/rust-bindgen.git", branch = "main" }
heck = { git = "https://github.com/withoutboats/heck.git", branch = "master" }
